list type and genres with jquery as folder list

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -95,6 +95,18 @@ ul {
   display: inline-block;
 }
 
+.fixed_size80 {
+  width:80%; /* or whatever width you want. */
+  max-width:80%; /* or whatever width you want. */
+  display: inline-block;
+}
+
+.fixed_size20 {
+  width:20%; /* or whatever width you want. */
+  max-width:20%; /* or whatever width you want. */
+  display: inline-block;
+}
+
 .space_between {
     display: flex;
     justify-content: space-between;
@@ -301,6 +313,89 @@ visibility: visible;
 top: 0;
 left: 60px; /*position where enlarged image should offset horizontally */
 
+}
+
+
+
+
+.filter-bar {
+  position: fixed;
+  height: 90vh;
+  width: 17%;
+  overflow: auto;
+}
+
+.resizable {
+  min-height: 50px;
+  resize: vertical;
+  overflow: auto;
+}
+
+.treeview {
+  margin: 10px 0 0 20px;
+}
+
+.treeview ul {
+  list-style: none;
+}
+
+.treeview li {
+  background: url(http://jquery.bassistance.de/treeview/images/treeview-default-line.gif) 0 0 no-repeat;
+  padding: 2px 0 2px 16px;
+}
+
+.treeview > li:first-child > label {
+  /* style for the root element - IE8 supports :first-child
+  but not :last-child ..... */
+
+}
+
+.treeview li.last {
+  background-position: 0 -1766px;
+}
+
+.treeview li > input {
+  height: 16px;
+  width: 16px;
+  /* hide the inputs but keep them in the layout with events (use opacity) */
+  opacity: 0;
+  filter: alpha(opacity=0); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+}
+
+.treeview li > label {
+  background: url(http://www.thecssninja.com/demo/css_custom-forms/gr_custom-inputs.png) 0 -1px no-repeat;
+  /* move left to cover the original checkbox area */
+  margin-left: -20px;
+  /* pad the text to make room for image */
+  padding-left: 20px;
+}
+
+/* Unchecked styles */
+
+.treeview .custom-unchecked {
+  background-position: 0 -1px;
+}
+.treeview .custom-unchecked:hover {
+  background-position: 0 -21px;
+}
+
+/* Checked styles */
+
+.treeview .custom-checked {
+  background-position: 0 -81px;
+}
+.treeview .custom-checked:hover {
+  background-position: 0 -101px;
+}
+
+/* Indeterminate styles */
+
+.treeview .custom-indeterminate {
+  background-position: 0 -141px;
+}
+.treeview .custom-indeterminate:hover {
+  background-position: 0 -121px;
 }
 
 
