--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -4,12 +4,12 @@
 <ul id="torrentsList">
   <li>
     <div class="space_between">
-      <span class="fixed_size50">Name</span>
+      <span id="sortName" class="fixed_size50">Name</span>
       <span class="fixed_size5">Download</span>
-      <span class="fixed_size5">Type</span>
-      <span class="fixed_size5">Genre</span>
-      <span class="fixed_size5">Added</span>
-      <span class="fixed_size5">Size</span>
+      <span id="sortType" class="fixed_size5">Type</span>
+      <span id="sortGenre" class="fixed_size5">Genre</span>
+      <span id="sortAdded" class="fixed_size5">Added</span>
+      <span id="sortSize" class="fixed_size5">Size</span>
     </div>
   </li>
 <%= for torrent <- @torrents do %>
