--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -49,12 +49,12 @@
       <ul>
         <li>
           <div class="space_between">
-            <span id="sortName" class="fixed_size50">Name</span>
+            <span id="sort_name" class="fixed_size50">Name</span>
             <span class="fixed_size5">Download</span>
-            <span id="sortType" class="fixed_size5">Type</span>
-            <span id="sortGenre" class="fixed_size5">Genre</span>
-            <span id="sortAdded" class="fixed_size5">Added</span>
-            <span id="sortSize" class="fixed_size5">Size</span>
+            <span id="sort_type" class="fixed_size5">Type</span>
+            <span id="sort_genre" class="fixed_size5">Genre</span>
+            <span id="sort_added" class="fixed_size5">Added</span>
+            <span id="sort_size" class="fixed_size5">Size</span>
           </div>
         </li>
       </ul>
