enable/disable description search

--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -44,6 +44,7 @@
       <h2>Listing torrents</h2>
 
       Search for: <input id="searchTerm" type="text" value="<%= if Map.has_key?(@params, "search") do @params["search"] end %>"></input>
+      <input type="checkbox" id="searchDescription"> in description
       Show: <input id="page_size" type="text" value="<%= if Map.has_key?(@params, "page_size") do @params["page_size"] end %>"></input> per page
       <div>
         <label onclick="toggle_displayByClass('torrentContent');">expand all</label>
