--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -15,13 +15,13 @@ end %>
 <div class="images">
   <%= unless is_nil(images) or images == [] do %>
     <img class="lazy coverImage hover-shadow cursor"
-         data-src="images/remote/<%= images |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+         data-src="images/remote/<%= decodeImgFirst(images) %>"
          onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', 1)" />
 
       <div class="moreImages">
         <%= for img <- images do %>
           <%= if Enum.find_index(images, fn(x) -> x == img end) > 0 do %>
-            <img class="lazy additionalImage lightbox cursor" class="lazy" data-src="images/remote/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+            <img class="lazy additionalImage lightbox cursor" class="lazy" data-src="images/remote/<%= decodeImg(img) %>"
                             onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(images, fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
           <% end %>
         <% end %>
@@ -35,7 +35,7 @@ end %>
         <div class="modal-viewer">
           <%= for img <- images do %>
             <div class="mySlides">
-              <img class="lazy" data-src="images/remote/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>" width="100%"/>
+              <img class="lazy" data-src="images/remote/<%= decodeImg(img) %>" width="100%"/>
             </div>
           <% end %>
 
@@ -48,13 +48,13 @@ end %>
         </div>
 
         <img class="lazy coverImage lightbox cursor"
-           data-src="images/remote/<%= images |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+           data-src="images/remote/<%= decodeImgFirst(images) %>"
            onclick="currentSlide('<%= torrent.id %>myModal', 1)" />
 
         <div class="moreImages">
           <%= for img <- images do %>
             <%= if Enum.find_index(images, fn(x) -> x == img end) > 0 do %>
-              <img class="lazy additionalImage lightbox cursor" class="lazy" data-src="images/remote/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+              <img class="lazy additionalImage lightbox cursor" class="lazy" data-src="images/remote/<%= decodeImg(img) %>"
                              onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(images, fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
             <% end %>
           <% end %>
