--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -35,7 +35,7 @@ end %>
         <div class="modal-viewer">
           <%= for img <- images do %>
             <div class="mySlides">
-              <img class="lazy" data-src="images/remote/<%= decodeImg(img) %>" width="100%"/>
+              <img class="visibleImage lazy" data-src="images/remote/<%= decodeImg(img) %>" width="100%"/>
             </div>
           <% end %>
 
